# Hololang

./: CMakeLists.txt  LICENSE  README.md  tutorial.holo
Hololang/src/: Key.cpp  Key.h  ShellExec.h
include/core/: values.hpp
include/io/: glob.hpp
src/: main.cpp
src/core/: heap.cpp  interpreter.cpp  symtable.cpp
src/io/: glob.cpp  lexer.cpp
src/prelude/: repl.cpp  repl.holo
src/std/: arrays.cpp  boolean.cpp  controlflow.cpp  indexing.cpp  os.cpp  stack.cpp  strings.cpp  typing.cpp
